fix: constrain logo height and coverage grid block sizes

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <div class="flex justify-between items-center h-20">
                 <!-- Logo -->
                 <a href="/" class="flex-shrink-0">
-                    <img src="images/ln_logo.png" alt="Lucid North" height="40">
+                    <img src="images/ln_logo.png" alt="Lucid North" class="h-10 w-auto">
                 </a>
 
                 <!-- Navigation Links -->
@@ -211,25 +211,25 @@
                 </div>
 
                 <!-- Right Column: Coverage Grid Illustration -->
-                <div class="slide-in-right">
-                    <div class="grid grid-cols-2 gap-3">
+                <div class="slide-in-right flex items-center justify-center">
+                    <div class="grid grid-cols-2 gap-3 max-w-[240px] md:max-w-[280px]">
                         <!-- Block 1 - Navy -->
-                        <div class="aspect-square rounded-2xl bg-navy"></div>
+                        <div class="w-24 h-24 md:w-28 md:h-28 rounded-2xl bg-navy"></div>
 
                         <!-- Block 2 - Brand Blue -->
-                        <div class="aspect-square rounded-2xl bg-brand-blue"></div>
+                        <div class="w-24 h-24 md:w-28 md:h-28 rounded-2xl bg-brand-blue"></div>
 
                         <!-- Block 3 - Brand Orange (animated) -->
-                        <div class="aspect-square rounded-2xl bg-brand-orange fill-block fill-block-1"></div>
+                        <div class="w-24 h-24 md:w-28 md:h-28 rounded-2xl bg-brand-orange fill-block fill-block-1"></div>
 
                         <!-- Block 4 - Navy -->
-                        <div class="aspect-square rounded-2xl bg-navy"></div>
+                        <div class="w-24 h-24 md:w-28 md:h-28 rounded-2xl bg-navy"></div>
 
                         <!-- Block 5 - Brand Blue (animated) -->
-                        <div class="aspect-square rounded-2xl bg-brand-blue fill-block fill-block-2"></div>
+                        <div class="w-24 h-24 md:w-28 md:h-28 rounded-2xl bg-brand-blue fill-block fill-block-2"></div>
 
                         <!-- Block 6 - Brand Orange -->
-                        <div class="aspect-square rounded-2xl bg-brand-orange"></div>
+                        <div class="w-24 h-24 md:w-28 md:h-28 rounded-2xl bg-brand-orange"></div>
                     </div>
                 </div>
             </div>
