--- a/sandbox.html
+++ b/sandbox.html
@@ -253,7 +253,7 @@
             <div class="flex justify-between items-center h-20">
                 <!-- Logo -->
                 <a href="/" class="flex-shrink-0">
-                    <img src="images/ln_logo.png" alt="Lucid North" height="40">
+                    <img src="images/ln_logo.png" alt="Lucid North" class="h-10 w-auto">
                 </a>
 
                 <!-- Navigation Links -->
